--- a/.taskmasterconfig
+++ b/.taskmasterconfig
@@ -28,5 +28,10 @@
     "ollamaBaseUrl": "http://localhost:11434/api",
     "userId": "1234567890",
     "azureOpenaiBaseUrl": "https://your-endpoint.openai.azure.com/"
+  },
+  "taskGeneration": {
+    "format": "markdown",
+    "extension": ".md",
+    "template": null
   }
 }
