--- a/.taskmasterconfig
+++ b/.taskmasterconfig
@@ -1,32 +1,32 @@
 {
-	"models": {
-		"main": {
-			"provider": "anthropic",
-			"modelId": "claude-sonnet-4-20250514",
-			"maxTokens": 50000,
-			"temperature": 0.2
-		},
-		"research": {
-			"provider": "perplexity",
-			"modelId": "sonar-pro",
-			"maxTokens": 8700,
-			"temperature": 0.1
-		},
-		"fallback": {
-			"provider": "anthropic",
-			"modelId": "claude-3-7-sonnet-20250219",
-			"maxTokens": 128000,
-			"temperature": 0.2
-		}
-	},
-	"global": {
-		"logLevel": "info",
-		"debug": false,
-		"defaultSubtasks": 5,
-		"defaultPriority": "medium",
-		"projectName": "Taskmaster",
-		"ollamaBaseUrl": "http://localhost:11434/api",
-		"userId": "1234567890",
-		"azureOpenaiBaseUrl": "https://your-endpoint.openai.azure.com/"
-	}
+  "models": {
+    "main": {
+      "provider": "openrouter",
+      "modelId": "google/gemini-2.5-flash-preview-05-20",
+      "maxTokens": 50000,
+      "temperature": 0.2
+    },
+    "research": {
+      "provider": "openrouter",
+      "modelId": "openai/gpt-4o-mini",
+      "maxTokens": 8700,
+      "temperature": 0.1
+    },
+    "fallback": {
+      "provider": "openrouter",
+      "modelId": "deepseek/deepseek-r1-0528-qwen3-8b:free",
+      "maxTokens": 128000,
+      "temperature": 0.2
+    }
+  },
+  "global": {
+    "logLevel": "info",
+    "debug": false,
+    "defaultSubtasks": 5,
+    "defaultPriority": "medium",
+    "projectName": "Taskmaster",
+    "ollamaBaseUrl": "http://localhost:11434/api",
+    "userId": "1234567890",
+    "azureOpenaiBaseUrl": "https://your-endpoint.openai.azure.com/"
+  }
 }
