--- a/.taskmasterconfig
+++ b/.taskmasterconfig
@@ -2,13 +2,13 @@
   "models": {
     "main": {
       "provider": "openrouter",
-      "modelId": "google/gemini-2.5-flash-preview-05-20",
+      "modelId": "thudm/glm-4-32b:free",
       "maxTokens": 50000,
       "temperature": 0.2
     },
     "research": {
-      "provider": "openrouter",
-      "modelId": "openai/gpt-4o-mini",
+      "provider": "perplexity",
+      "modelId": "deep-research",
       "maxTokens": 8700,
       "temperature": 0.1
     },
