--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@anthropic-ai/sdk": "^0.39.0",
 		"@openrouter/ai-sdk-provider": "^0.4.5",
 		"ai": "^4.3.10",
+		"blessed": "^0.1.81",
 		"boxen": "^8.0.1",
 		"chalk": "^5.4.1",
 		"cli-table3": "^0.6.5",
