Update README for local installation and remove npm dependencies
- Remove npm installation instructions and replace with local clone/link method
- Update MCP configuration to use local task-master-mcp command
- Add personal fork identification and repository references
- Remove self-dependency from package.json to prevent npm conflicts
- Update troubleshooting section for local installation
- Add uninstallation instructions for future reference

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,7 @@ dev-debug.log
 # Added by Claude Task Master
 tasks.json
 tasks/ 
+.taskmasterconfig
+.windsurfrules
+.windsurfrules
+.taskmasterconfig
