--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "task-hero-ai",
-  "version": "0.15.8",
-  "description": "TaskMaster AI - A task management system for ambitious AI-driven development",
+  "version": "0.15.9",
+  "description": "TaskHero AI - A task management system for ambitious AI-driven development",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "task-hero": "bin/task-master.js",
-    "task-hero-ai": "bin/task-master.js",
+    "task-hero": "bin/task-hero.js",
+    "task-hero-ai": "bin/task-hero.js",
     "task-hero-mcp": "mcp-server/server.js"
   },
   "scripts": {
@@ -16,8 +16,8 @@
     "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "test:e2e": "./tests/e2e/run_e2e.sh",
     "test:e2e-report": "./tests/e2e/run_e2e.sh --analyze-log",
-    "prepare": "node -e \"const fs = require('fs'); const files = ['bin/task-master.js', 'mcp-server/server.js']; files.forEach(f => { try { fs.chmodSync(f, '755'); } catch(e) { /* Windows doesn't need chmod */ } });\"",
-    "menu": "node bin/task-master.js menu",
+    "prepare": "node -e \"const fs = require('fs'); const files = ['bin/task-hero.js', 'mcp-server/server.js']; files.forEach(f => { try { fs.chmodSync(f, '755'); } catch(e) { /* Windows doesn't need chmod */ } });\"",
+    "menu": "node bin/task-hero.js menu",
     "changeset": "changeset",
     "release": "changeset publish",
     "inspector": "npx @modelcontextprotocol/inspector node mcp-server/server.js",
@@ -31,7 +31,7 @@
     "development",
     "productivity",
     "cli",
-    "taskmaster",
+    "taskhero",
     "project-management",
     "cursor",
     "anthropic",
@@ -91,7 +91,7 @@
     "scripts/**",
     "assets/**",
     ".cursor/**",
-    "README-task-master.md",
+    "README-task-hero.md",
     "index.js",
     "bin/**",
     "mcp-server/**",
