✅ Dependency validation correctly prevents invalid status transitions ✅ Task description validation enforces 32-character minimum ✅ Init command creates complete directory structure with default files ✅ All command references use correct task-hero branding ✅ Interactive menu changes work as expected

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,10 @@ test-reset-project/
 # Note: tasks/ and prd/ directories are intentionally NOT ignored
 # These contain your project's task definitions and PRD files
 # and should be tracked in version control
+
+# TaskMaster AI - Ignore everything in test-init/ except prd/ and tasks/
+test-init/
+!test-init/prd/
+!test-init/tasks/
+!test-init/prd/**
+!test-init/tasks/**
