--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "test:e2e-report": "./tests/e2e/run_e2e.sh --analyze-log",
     "prepare": "node -e \"const fs = require('fs'); const files = ['bin/task-hero.js', 'mcp-server/server.js']; files.forEach(f => { try { fs.chmodSync(f, '755'); } catch(e) { /* Windows doesn't need chmod */ } });\"",
     "menu": "node bin/task-hero.js menu",
+    "web": "node bin/task-hero.js web",
+    "web:build": "cd kanban-webapp && npm run build",
+    "web:dev": "cd kanban-webapp && npm run dev:full",
     "changeset": "changeset",
     "release": "changeset publish",
     "inspector": "npx @modelcontextprotocol/inspector node mcp-server/server.js",
@@ -54,15 +57,19 @@
     "@anthropic-ai/sdk": "^0.39.0",
     "@aws-sdk/credential-providers": "^3.817.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "ai": "^4.3.10",
     "archiver": "^7.0.1",
     "boxen": "^8.0.1",
     "chalk": "^5.4.1",
+    "class-variance-authority": "^0.7.1",
     "cli-table3": "^0.6.5",
+    "clsx": "^2.1.1",
     "commander": "^11.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "extract-zip": "^2.0.1",
     "fastmcp": "^1.20.5",
     "figlet": "^1.8.0",
@@ -73,8 +80,12 @@
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^10.2.0",
     "ollama-ai-provider": "^1.2.0",
+    "open": "^10.1.0",
     "openai": "^4.89.0",
     "ora": "^8.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "yauzl": "^3.2.0",
     "zod": "^3.23.8"
@@ -98,7 +109,8 @@
     "index.js",
     "bin/**",
     "mcp-server/**",
-    "src/**"
+    "src/**",
+    "kanban-webapp/**"
   ],
   "overrides": {
     "node-fetch": "^2.6.12",
@@ -108,15 +120,25 @@
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.28.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "execa": "^8.0.1",
     "ink": "^5.0.1",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "mock-fs": "^5.5.0",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "react": "^18.3.1",
     "supertest": "^7.1.0",
-    "tsx": "^4.16.2"
+    "tailwindcss": "^4.1.8",
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.16.2",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5"
   },
   "contributors": [
     "Eyal Toledano (https://github.com/eyaltoledano)",
