--- a/kanban-webapp/package.json
+++ b/kanban-webapp/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "node server/index.js",
-    "dev:full": "concurrently \"npm run dev\" \"npm run dev:server\"",
+    "dev:server:simple": "node server/simple-server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:server:simple\"",
     "build": "tsc -b && vite build",
     "start": "node server/index.js",
     "lint": "eslint .",
@@ -18,6 +19,9 @@
     "test": "echo \"No tests specified yet\" && exit 0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
