--- a/kanban-webapp/tsconfig.app.json
+++ b/kanban-webapp/tsconfig.app.json
@@ -39,5 +39,6 @@
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/components/dnd-reference"]
 }
