kanban-app initial

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "prepare": "node -e \"const fs = require('fs'); const files = ['bin/task-hero.js', 'mcp-server/server.js']; files.forEach(f => { try { fs.chmodSync(f, '755'); } catch(e) { /* Windows doesn't need chmod */ } });\"",
     "menu": "node bin/task-hero.js menu",
     "web": "node bin/task-hero.js web",
-    "web:build": "cd kanban-webapp && npm run build",
-    "web:dev": "cd kanban-webapp && npm run dev:full",
+    "web:build": "cd kanban-app && npm run build",
+    "web:dev": "cd kanban-app && npm run dev:full",
     "changeset": "changeset",
     "release": "changeset publish",
     "inspector": "npx @modelcontextprotocol/inspector node mcp-server/server.js",
