--- a/kanban-app/package.json
+++ b/kanban-app/package.json
@@ -10,9 +10,7 @@
     "build": "tsc && vite build",
     "start:server": "node src/api/server.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
@@ -52,12 +50,6 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.0",
-    "@storybook/addon-a11y": "^9.0.4",
-    "@storybook/addon-docs": "^9.0.4",
-    "@storybook/addon-onboarding": "^9.0.4",
-    "@storybook/addon-vitest": "^9.0.4",
-    "@storybook/react-vite": "^9.0.4",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -70,10 +62,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-storybook": "^9.0.4",
     "playwright": "^1.52.0",
     "postcss": "^8.4.28",
-    "storybook": "^9.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^6.3.5",
